--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
 		"axios": "^1.9.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.5.0",
 		"react-router-dom": "^6.8.0",
 		"react-signature-canvas": "^1.0.6",
 		"react-toastify": "^11.0.5",
 		"sass": "^1.64.2",
+		"scss": "^0.2.4",
 		"zustand": "^4.3.2"
 	},
 	"devDependencies": {
