--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.11.1",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
 		"@mantine/carousel": "^6.0.11",
 		"@mantine/core": "^6.0.5",
 		"@mantine/dates": "^6.0.5",
@@ -18,9 +19,11 @@
 		"@mantine/modals": "^6.0.5",
 		"@mantine/notifications": "^6.0.5",
 		"@mantine/spotlight": "^6.0.5",
+		"@mui/material": "^7.0.2",
 		"@tanstack/react-query": "^4.28.0",
 		"@vitejs/plugin-react": "^4.0.4",
 		"axios": "^1.9.0",
+		"moment": "^2.30.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.5.0",
