--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@mantine/notifications": "^6.0.5",
 		"@mantine/spotlight": "^6.0.5",
 		"@mui/material": "^7.0.2",
+		"@mui/x-data-grid": "^8.2.0",
 		"@tanstack/react-query": "^4.28.0",
 		"@vitejs/plugin-react": "^4.0.4",
 		"axios": "^1.9.0",
@@ -27,6 +28,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.5.0",
+		"react-leaflet": "^4.2.1",
 		"react-router-dom": "^6.8.0",
 		"react-signature-canvas": "^1.0.6",
 		"react-toastify": "^11.0.5",
