--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@scriptassist/interview",
-	"private": true,
+	"name": "interview",
+	"private": false,
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "vite",
